fixed text hidden by picture problem in photo grid

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,8 +13,17 @@
 .thumbnail {
   border: 0;
 }
+
 .speaker {
-  height: 380px;
+  @media (max-width: 767px) {
+    height: 340px;
+  }
+  @media (min-width: 768px) and (max-width: 1199px) {
+    height: 380px;
+  }
+  @media (min-width: 1200px) {
+    height: 420px;
+  }
 }
 
 /* forms */
